Fixed container for diff table - need to deal with text overflow of rows

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,6 @@ tr:nth-child(even) {
 
 tr {
     white-space: pre;
-    max-width: 100%;
 }
 
 
@@ -25,8 +24,16 @@ tr {
 
 #diffTableCont {
     padding-left: 15px;
+    padding-right: 15px;
+}
+
+#diffTable {
+    table-layout: fixed;
+    width: 100%;
+    white-space: nowrap;
 }
 
 #headerEls {
     background-color: white;
+    padding: 10px;
 }
